--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </div>
     <button id="newJokes" onclick="reload()">New Jokes</button><br /><br />
     <button id="general" onclick="filterGeneral()">General</button>
-    <button id="general" onclick="filterProgramming()">Programming</button>
+    <button id="program" onclick="filterProgramming()">Programming</button>
 
     <div class="card-container"></div>
   </body>
