--- a/index.html
+++ b/index.html
@@ -11,10 +11,12 @@
     <div class="container">
       <h1>Jokes</h1>
     </div>
-    <button id="newJokes" onclick="reload()">New Jokes</button><br /><br />
-    <button id="general" onclick="filterGeneral()">General</button>
-    <button id="program" onclick="filterProgramming()">Programming</button>
-
+    <div class="button">
+      <button id="newJokes" onclick="reload()">New Jokes</button><br /><br />
+      <button id="general" onclick="filterGeneral()">General</button>
+      <button id="program" onclick="filterProgramming()">Programming</button>
+      <button id="others" onclick="filterOthers()">Others</button>
+    </div>
     <div class="card-container"></div>
   </body>
 </html>
